Build: Add pydantic dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
 name = "dantArrays"
 version = "0.0.1"
-description = "A think wrapper over np.ndarray to provide an intuitive interface for attaching pydantic models as metadata to arrays."
+description = "A thin wrapper over np.ndarray to provide an intuitive interface for attaching pydantic models as metadata to arrays."
 authors = [{ name = "Jordan Taylor", email = "jtaylor81284@gmail.com" }]
 readme = "README.md"
 keywords = ['python']
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "numpy>=2.0.0",
+    "pydantic>=2.10.6",
 ]
 classifiers = [
     "Intended Audience :: Developers",
